# Pretext-Game

./: .gitignore  agents.md  index.css  index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: deploy.yml  desktop-beta.yml
electron/: main.ts
electron/resources/: icon.icns
public/wordlists/: README.md
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/audio/: AudioManager.ts
src/effects/: ParticleSystem.ts
src/game/: Game.ts  Lane.ts  Levels.ts  Player.ts  Scoring.ts
src/text/: TextEngine.ts  TextStream.ts  passages.ts
src/utils/: constants.ts  dictionary.ts
