[package]
name = "lexicon-crossing-desktop"
version = "1.0.0"
description = "Lexicon Crossing desktop shell"
authors = ["Myles"]
license = "MIT"
repository = "https://github.com/mylesstupp/Pretext-Game"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lexicon_crossing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
